--- a/index.html
+++ b/index.html
@@ -221,44 +221,8 @@
       const TAGS = {
         tag1: {
           label: 'Signal 1',
-          prompt: 'Ask someone nearby: “What brought you to Melanated in Melbourne tonight?”'
+          prompt: 'testing test'
         },
-        tag2: {
-          label: 'Signal 2',
-          prompt: 'Find someone with a similar style and compliment one thing they’re wearing.'
-        },
-        tag3: {
-          label: 'Signal 3',
-          prompt: 'Ask a stranger: “What would the title of your life podcast be?”'
-        },
-        tag4: {
-          label: 'Signal 4',
-          prompt: 'Share with someone: a song that feels like home — and ask them for theirs.'
-        },
-        tag5: {
-          label: 'Signal 5',
-          prompt: 'Find someone laughing and ask what made them laugh tonight.'
-        },
-        tag6: {
-          label: 'Signal 6',
-          prompt: 'Tell someone one thing you’re proud of yourself for this year.'
-        },
-        tag7: {
-          label: 'Signal 7',
-          prompt: 'Ask someone: “What kind of story do you want to hear more of in our communities?”'
-        },
-        tag8: {
-          label: 'Signal 8',
-          prompt: 'With someone you’ve just met, take a selfie and call it your “Episode 1 cover art”.'
-        },
-        tag9: {
-          label: 'Signal 9',
-          prompt: 'Ask someone what their comfort show, podcast, or YouTube rabbit hole is.'
-        },
-        tag10: {
-          label: 'Signal 10',
-          prompt: 'Find someone standing alone and invite them into your conversation or group.'
-        }
       };
 
       const TOTAL_TAGS = Object.keys(TAGS).length; // should be 10
